--- a/prac_07/box_layout.kv
+++ b/prac_07/box_layout.kv
@@ -8,7 +8,7 @@ BoxLayout:
         id: input_name
         text: ''
     Button:
-        id = output_label
+        id: output_label
         text: 'Greet'
         on_press: app.handle_greet()
     Label:
